--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p span{
 	color: darkgrey;
 	text-shadow: none;
 }
-div{
+#goodluck{
 	font-family: lobster;
 	font-size: 40px;
 	color: palegoldenrod;
@@ -90,4 +90,49 @@ section label{
 	border-radius: 5px;
 	margin-top: 10px;
 	font-size: 20px;
+}
+.board{
+	display: none;
+	font-family: lobster;
+	font-size: 10px;
+	position: fixed;
+	top: 100px;
+	left: 0px;
+	background-color: antiquewhite;
+	border: 5px solid goldenrod;
+	border-radius: 10px;
+	width: 15%;
+	height: 50%;
+	color: darkcyan;
+	overflow: auto;
+}
+
+#board{
+	position: fixed;
+	top: 250px;
+	left: 5px;
+}
+
+.board button{
+	background-color: indianred;
+	color: ghostwhite;
+	padding: 0px 5px;
+}
+
+ol, ol li{
+	border-bottom: 1px solid black;
+}
+
+
+#footer{
+  	position: relative;
+  	bottom: 0;
+  	width: 100%;
+  	height: 55px;
+  	background-image: linear-gradient(#164C7E,#20124d);
+    color: whitesmoke;
+}
+#footer h6{
+	font-family: prompt;
+  	padding: 20px;
 }
