--- a/ingame-style.css
+++ b/ingame-style.css
@@ -17,6 +17,24 @@
 	src:  url('fonts/Lobster/Lobster-Regular.ttf');
 	font-family: lobster;
 }
+@media screen and (max-width: 600px) {
+	img{
+		width: 30px;
+		height: 30px;
+	}
+	#memory-box{
+		width: 100vw;
+	}
+}
+@media screen and (min-width: 600px) and (max-width: 960px){
+	img{
+		width: 30px;
+		height: 30px;
+	}
+	#memory-box{
+		width: 80vw;
+	}
+}
 body{
 	background-image: linear-gradient(#164C7E,#20124d);
 	color: ghostwhite;
@@ -142,12 +160,21 @@ hr{
 #btn-fill:hover{
 	background-color: #0060F3;
 }
-#footer{
-  	position: relative;
-  	bottom: 0;
-  	width: 100%;
-  	height: 55px;/*073763*/
-  	background-image: linear-gradient(#203060,#201221);
+#page-container {
+	position: relative;
+	min-height: 100vh;
+  }
+  
+#content-wrap {
+	padding-bottom: 3.5rem;    /* Footer height */
+}
+
+#footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 3.5rem;            /* Footer height */
+	background-image: linear-gradient(#203060,#201221);
     color: whitesmoke;
 }
 #footer h6{
