--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-	margin: 0px;
+	margin: 0;
 }
 @font-face{
 	src:  url('fonts/Bebas Neue/BebasNeue-Regular.ttf');
@@ -17,6 +17,32 @@
 	src:  url('fonts/Lobster/Lobster-Regular.ttf');
 	font-family: lobster;
 }
+
+@media screen and (max-width: 600px) {
+	img{
+		width: 30px;
+		height: 30px;
+	}
+	label{
+		font-size: 8px;
+	}
+	p{
+		padding-left: 40px;
+	}
+}
+@media screen and (min-width: 600px) and (max-width: 960px){
+	img{
+		width: 30px;
+		height: 30px;
+	}
+	label{
+		font-size: 15px;
+	}
+	p{
+		padding-left: 40px;
+	}
+}
+
 body{
 	background-color: #16537e;
 	color: ghostwhite;
@@ -123,13 +149,21 @@ ol, ol li{
 	border-bottom: 1px solid black;
 }
 
+#page-container {
+	position: relative;
+	min-height: 100vh;
+  }
+  
+#content-wrap {
+	padding-bottom: 3.5rem;    /* Footer height */
+}
 
-#footer{
-  	position: relative;
-  	bottom: 0;
-  	width: 100%;
-  	height: 55px;
-  	background-image: linear-gradient(#164C7E,#20124d);
+#footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 3.5rem;            /* Footer height */
+	background-image: linear-gradient(#164C7E,#20124d);
     color: whitesmoke;
 }
 #footer h6{
